crates/red_knot_python_semantic/resources/mdtest/snapshots/for.md_-_For_loops_-_Union_type_as_iterable_where_one_union_element_has_invalid_`__iter__`_method.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: for.md - For loops - Union type as iterable where one union element has invalid `__iter__` method
mdtest path: crates/red_knot_python_semantic/resources/mdtest/loops/for.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import reveal_type
 2 | 
 3 | class TestIter:
 4 |     def __next__(self) -> int:
 5 |         return 42
 6 | 
 7 | class Test:
 8 |     def __iter__(self) -> TestIter:
 9 |         return TestIter()
10 | 
11 | class Test2:
12 |     def __iter__(self) -> int:
13 |         return 42
14 | 
15 | def _(flag: bool):
16 |     # TODO: Improve error message to state which union variant isn't iterable (https://github.com/astral-sh/ruff/issues/13989)
17 |     # error: [not-iterable]
18 |     for x in Test() if flag else Test2():
19 |         reveal_type(x)  # revealed: int
```

# Diagnostics

```
error: lint:not-iterable
  --> /src/mdtest_snippet.py:18:14
   |
16 |     # TODO: Improve error message to state which union variant isn't iterable (https://github.com/astral-sh/ruff/issues/13989)
17 |     # error: [not-iterable]
18 |     for x in Test() if flag else Test2():
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Object of type `Test | Test2` may not be iterable because its `__iter__` method returns an object of type `TestIter | int`, which may not have a `__next__` method
19 |         reveal_type(x)  # revealed: int
   |

```

```
info: revealed-type
  --> /src/mdtest_snippet.py:19:9
   |
17 |     # error: [not-iterable]
18 |     for x in Test() if flag else Test2():
19 |         reveal_type(x)  # revealed: int
   |         ^^^^^^^^^^^^^^ Revealed type is `int`
   |

```
